dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/main.cpp)
AC_CONFIG_AUX_DIR(config)

AM_INIT_AUTOMAKE(netmodeler, 0.1)
AC_PROG_CXX
AC_CHECK_TOOL(RANLIB, ranlib, :)

AC_PROG_LIBTOOL
AM_PATH_PYTHON(2.3)
AC_PROG_SWIG(1.3.25)
SWIG_ENABLE_CXX
SWIG_PYTHON

AC_OUTPUT(Makefile src/Makefile pynm/Makefile)
