dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/main.cpp)
AC_CONFIG_AUX_DIR(config)

AM_INIT_AUTOMAKE(netmodeler, 0.1)
AC_PROG_CXX
AC_CHECK_TOOL(RANLIB, ranlib, :)
AC_PROG_LIBTOOL

swig="YES"
AC_ARG_ENABLE(swig,
  [AC_HELP_STRING(--enable-swig,[enable swig support])],
  [case "${enableval}" in
    yes) swig=true ;;
    no) swig=false ;;
    *) AC_MSG_ERROR(bad value ${enableval} for --enable-swig) ;;
   esac],
   [swig=false])
AM_CONDITIONAL(USE_SWIG, test x$swig = xtrue)

if test x$swig = xtrue; then
AM_PATH_PYTHON(2.3)
AC_PROG_SWIG(1.3.25)
SWIG_ENABLE_CXX
SWIG_PYTHON
fi

AC_OUTPUT(Makefile src/Makefile pynm/Makefile)
